Creation of the achievements and about me

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <ul class="nav-central">
                   <a href="#top"><li id="navHome"><i class="fas fa-home"></i></li></a>
                   <a href="#achievements"><li id="navAchievements"><i class="fas fa-trophy"></i></li></a>
-                  <a href="#achievements"><li id="navWork"><i class="fas fa-cogs"></i></li></a>
+                  <a href="#aboutme"><li id="navAbout"><i class="fas fa-cogs"></i></li></a>
                   <a href="#projects"><li id="navProjects"><i class="fas fa-eye"></i></li></a>
                 </ul>
                 <ul class="social">
-                  <a href=""><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
-                  <a href=""><li id="navFace"><i class="fab fa-facebook-f"></i></li></a>
-                  <a href=""><li id="navInsta"><i class="fab fa-instagram"></i></li></a>
+                  <a href="https://www.linkedin.com/in/zack-evans-853075157/"><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
+                  <a href="https://www.facebook.com/zevans35"><li id="navFace"><i class="fab fa-facebook-f"></i></li></a>
+                  <a href="https://instagram.com/zevans353"><li id="navInsta"><i class="fab fa-instagram"></i></li></a>
                 </ul>
             </nav>
 
@@ -65,7 +65,7 @@
 
                 </div>
 
-                <div class="system">
+                <!--<div class="system">
 
                   <div>
                     <div class="central"></div>
@@ -78,9 +78,67 @@
                     <div class="third"></div>
                   </div>
 
-                </div>
+                </div>-->
 
             </header>
+
+            <section id="achievements" class="flex">
+              <div>
+                <h2>My Achievements</h2>
+                <div class="flex flex-row">
+                  <div class="card">
+                    <img src="assets/logo/world-skills.png" alt="World Skills UK">
+                    <div>
+                      <h3>WSUK Regional Heat</h3>
+                      <p>2018 | 2nd Place</p>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="assets/logo/inspiring-skills-wales.png" alt="Inspiring Skills Wales">
+                    <div>
+                      <h3>Inspiring Skills Wales</h3>
+                      <p>2018 | 1nd Place</p>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="assets/logo/world-skills.png" alt="World Skills UK">
+                    <div>
+                      <h3>WSUK Web Design Competition </h3>
+                      <p>2019 | 8th Place</p>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="assets/logo/world-skills.png" alt="World Skills UK">
+                    <div>
+                      <h3>WSUK Nation Final </h3>
+                      <p>2019 | TBC</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section id="aboutme" class="flex">
+              <div>
+                <h2>About Me</h2>
+                <div>
+                  <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
+                  <div class="progress"><p style="width: 90%; background:#F0DEFD">90%</p></div>
+                </div>
+                <div>
+                  <p class=""><i class="far fa-images"></i> CMS Development (Wordpress)</p>
+                  <div class="progress"><p style="width: 70%; background:#DEFDE0">70%</p></div>
+                </div>
+                <div>
+                  <p class=""><i class="fas fa-cogs"></i> Backend Web Development (PHP | MySQL | Java)</p>
+                  <div class="progress"><p style="width: 55%; background:#FDDFDF">55%</p></div>
+                </div>
+                <div>
+                  <p class=""><i class="fas fa-cubes"></i> Software Development (C# | C++)</p>
+                  <div class="progress"><p style="width: 30%; background:#B4DCD1">30%</p></div>
+                </div>
+              </div>
+            </section>
 
         </main>
 
