--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
             <!-- Navigation
             ---------------------------------------------->
             <nav class="nav">
-                <ul class="nav-central">
-                  <a href="#top"><li id="navHome"><i class="fas fa-home"></i></li></a>
-                  <a href="#achievements"><li id="navAchievements"><i class="fas fa-trophy"></i></li></a>
-                  <a href="#aboutme"><li id="navAbout"><i class="fas fa-cogs"></i></li></a>
-                  <a href="#projects"><li id="navProjects"><i class="fas fa-eye"></i></li></a>
-                </ul>
-                <ul class="social">
-                  <a href="https://www.linkedin.com/in/zack-evans-853075157/"><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
-                  <a href="https://www.facebook.com/zevans35"><li id="navFace"><i class="fab fa-facebook-f"></i></li></a>
-                  <a href="https://instagram.com/zevans353"><li id="navInsta"><i class="fab fa-instagram"></i></li></a>
-                </ul>
+              <a href="#top"><img src="assets/logo/site.png" alt="LOGO" class="logo"></a>
+              <ul class="nav-central">
+                <a href="#top"><li id="navHome"><i class="fas fa-home"></i></li></a>
+                <a href="#achievements"><li id="navAchievements"><i class="fas fa-trophy"></i></li></a>
+                <a href="#aboutme"><li id="navAbout"><i class="fas fa-cogs"></i></li></a>
+                <a href="#projects"><li id="navProjects"><i class="fas fa-eye"></i></li></a>
+              </ul>
+              <ul class="social">
+                <a href="https://www.linkedin.com/in/zack-evans-853075157/"><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
+                <a href="https://www.facebook.com/zevans35"><li id="navFace"><i class="fab fa-facebook-f"></i></li></a>
+                <a href="https://instagram.com/zevans353"><li id="navInsta"><i class="fab fa-instagram"></i></li></a>
+              </ul>
             </nav>
 
             <!-- Header | Front Page
@@ -64,6 +65,8 @@
                     <h2>Full Stack Developer</h2>
 
                 </div>
+
+                <img src="assets/logo/site.png" alt="LOGO" class="logo">
 
                 <!--<div class="system">
 
@@ -121,23 +124,56 @@
             <section id="aboutme" class="flex">
               <div>
                 <h2>About Me</h2>
+                <p>It started out as a hobby for tech. It then evloved into the design and creation of websites.</p>
+                <p>I started out in 2017 working on small little websites for myself and friends.</p>
+                <p>In 2018 I started to take part in web design & development competitions.</p>
+                <p>2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
+                <p></p>
                 <div>
                   <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
-                  <div class="progress"><p style="width: 90%; background:#F0DEFD">90%</p></div>
+                  <div class="progress"><p style="width: 90%;">90%</p></div>
                 </div>
                 <div>
                   <p class=""><i class="far fa-images"></i> CMS Development (Wordpress)</p>
-                  <div class="progress"><p style="width: 70%; background:#DEFDE0">70%</p></div>
+                  <div class="progress"><p style="width: 70%;">70%</p></div>
                 </div>
                 <div>
                   <p class=""><i class="fas fa-cogs"></i> Backend Web Development (PHP | MySQL | Java)</p>
-                  <div class="progress"><p style="width: 55%; background:#FDDFDF">55%</p></div>
+                  <div class="progress"><p style="width: 55%;">55%</p></div>
                 </div>
                 <div>
                   <p class=""><i class="fas fa-cubes"></i> Software Development (C# | C++)</p>
-                  <div class="progress"><p style="width: 30%; background:#B4DCD1">30%</p></div>
+                  <div class="progress"><p style="width: 30%;">30%</p></div>
                 </div>
               </div>
+            </section>
+
+            <section id="projects" class="flex">
+
+              <div>
+                <h2>Projects</h2>
+                <div>
+                  <a href="http://colours.zackevans.xyz" target="_blank">
+                    <div class="content yellow flex flex-row">
+                      <div>
+                        <h3>Random Colour Generator</h3>
+                        <p>A little project I created becuase I hate coming up with different colour ideas.</p>
+                      </div>
+                      <img src="assets/project/colours.png" alt="">
+                    </div>
+                  </a>
+                  <a href="http://colours.zackevans.xyz" target="_blank">
+                    <div class="content flex flex-row">
+                      <div>
+                        <h3>Task Planner</h3>
+                        <p>This project has one mission. Stops me from forgetting events and projects.</p>
+                      </div>
+                      <img src="assets/project/colours.png" alt="">
+                    </div>
+                  </a>
+                </div>
+              </div>
+
             </section>
 
         </main>
