--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="font-awesome/css/all.min.css" rel="stylesheet">
         <!-- JQuery
         ---------------------------------------------->
-        <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
         <!-- Fonts
         ---------------------------------------------->
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -39,15 +39,15 @@
 
             <!-- Navigation
             ---------------------------------------------->
-            <nav class="nav">
-              <a href="#top"><img src="assets/logo/site.png" alt="LOGO" class="logo"></a>
-              <ul class="nav-central">
+            <nav class="nav fadeInLeft">
+              <a href="#top" class="fadeIn"><img src="assets/logo/site.png" alt="LOGO" class="logo"></a>
+              <ul class="nav-central fadeIn">
                 <a href="#top"><li id="navHome"><i class="fas fa-home"></i></li></a>
                 <a href="#achievements"><li id="navAchievements"><i class="fas fa-trophy"></i></li></a>
                 <a href="#aboutme"><li id="navAbout"><i class="fas fa-cogs"></i></li></a>
                 <a href="#projects"><li id="navProjects"><i class="fas fa-eye"></i></li></a>
               </ul>
-              <ul class="social">
+              <ul class="social fadeIn">
                 <a href="https://www.linkedin.com/in/zack-evans-853075157/"><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
                 <a href="https://www.facebook.com/zevans35"><li id="navFace"><i class="fab fa-facebook-f"></i></li></a>
                 <a href="https://instagram.com/zevans353"><li id="navInsta"><i class="fab fa-instagram"></i></li></a>
@@ -60,13 +60,13 @@
 
                 <div class="head-text">
 
-                    <h1>Zack Evans</h1>
-                    <hr><hr class="central"><hr class="right">
-                    <h2>Full Stack Developer</h2>
+                    <h1 class="fadeInTop">Zack Evans</h1>
+                    <hr class="fadeInRight"><hr class="central fadeInRight"><hr class="right fadeInRight">
+                    <h2 class="fadeInBottom">Full Stack Developer</h2>
 
                 </div>
 
-                <img src="assets/logo/site.png" alt="LOGO" class="logo">
+                <img src="assets/logo/logo.png" alt="LOGO" class="logo fadeInRight">
 
                 <!--<div class="system">
 
@@ -87,30 +87,30 @@
 
             <section id="achievements" class="flex">
               <div>
-                <h2>My Achievements</h2>
+                <h2 class="wow fadeInLeft">My Achievements</h2>
                 <div class="flex flex-row">
-                  <div class="card">
+                  <div class="card wow fadeInLeft">
                     <img src="assets/logo/world-skills.png" alt="World Skills UK">
                     <div>
                       <h3>WSUK Regional Heat</h3>
                       <p>2018 | 2nd Place</p>
                     </div>
                   </div>
-                  <div class="card">
+                  <div class="card wow fadeInLeft">
                     <img src="assets/logo/inspiring-skills-wales.png" alt="Inspiring Skills Wales">
                     <div>
                       <h3>Inspiring Skills Wales</h3>
                       <p>2018 | 1nd Place</p>
                     </div>
                   </div>
-                  <div class="card">
+                  <div class="card wow fadeInLeft">
                     <img src="assets/logo/world-skills.png" alt="World Skills UK">
                     <div>
                       <h3>WSUK Web Design Competition </h3>
                       <p>2019 | 8th Place</p>
                     </div>
                   </div>
-                  <div class="card">
+                  <div class="card wow fade-left fadeInLeft">
                     <img src="assets/logo/world-skills.png" alt="World Skills UK">
                     <div>
                       <h3>WSUK Nation Final </h3>
@@ -123,25 +123,24 @@
 
             <section id="aboutme" class="flex">
               <div>
-                <h2>About Me</h2>
-                <p>It started out as a hobby for tech. It then evloved into the design and creation of websites.</p>
-                <p>I started out in 2017 working on small little websites for myself and friends.</p>
-                <p>In 2018 I started to take part in web design & development competitions.</p>
-                <p>2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
-                <p></p>
-                <div>
+                <h2 class="wow fadeInLeft">About Me</h2>
+                <p class="wow fadeIn">It started out as a hobby for tech. It then evloved into the design and creation of websites.</p>
+                <p class="wow fadeIn">I started out in 2017 working on small little websites for myself and friends.</p>
+                <p class="wow fadeIn">In 2018 I started to take part in web design & development competitions.</p>
+                <p class="wow fadeIn">2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
+                <div class="wow fadeInRight">
                   <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
                   <div class="progress"><p style="width: 90%;">90%</p></div>
                 </div>
-                <div>
+                <div class="wow fadeInRight">
                   <p class=""><i class="far fa-images"></i> CMS Development (Wordpress)</p>
                   <div class="progress"><p style="width: 70%;">70%</p></div>
                 </div>
-                <div>
+                <div class="wow fadeInRight">
                   <p class=""><i class="fas fa-cogs"></i> Backend Web Development (PHP | MySQL | Java)</p>
                   <div class="progress"><p style="width: 55%;">55%</p></div>
                 </div>
-                <div>
+                <div class="wow fadeInRight">
                   <p class=""><i class="fas fa-cubes"></i> Software Development (C# | C++)</p>
                   <div class="progress"><p style="width: 30%;">30%</p></div>
                 </div>
@@ -151,10 +150,10 @@
             <section id="projects" class="flex">
 
               <div>
-                <h2>Projects</h2>
+                <h2 class="wow fadeInLeft">Projects</h2>
                 <div>
                   <a href="http://colours.zackevans.xyz" target="_blank">
-                    <div class="content yellow flex flex-row">
+                    <div class="content yellow flex flex-row wow fadeInLeft">
                       <div>
                         <h3>Random Colour Generator</h3>
                         <p>A little project I created becuase I hate coming up with different colour ideas.</p>
@@ -162,13 +161,13 @@
                       <img src="assets/project/colours.png" alt="">
                     </div>
                   </a>
-                  <a href="http://colours.zackevans.xyz" target="_blank">
-                    <div class="content flex flex-row">
+                  <a href="http://dev.zackevans.xyz" target="_blank">
+                    <div class="content flex flex-row wow fadeInRight">
                       <div>
                         <h3>Task Planner</h3>
                         <p>This project has one mission. Stops me from forgetting events and projects.</p>
                       </div>
-                      <img src="assets/project/colours.png" alt="">
+                      <img src="assets/project/dev.png" alt="">
                     </div>
                   </a>
                 </div>
@@ -180,9 +179,18 @@
 
         <!-- JavaScript for web page
         ---------------------------------------------->
-        <script type="text/javascript" src="js/nav.js"></script>
         <script type="text/javascript" src="js/page-load.js"></script>
         <script type="text/javascript" src="js/scroll.js"></script>
+        <script src="js/wow.js"></script>
+        <script>
+            wow = new WOW(
+                {
+                    animateClass: 'animated',
+                    offset:       100
+                }
+            );
+            wow.init();
+        </script>
 
     </body>
 </html>
