--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         ---------------------------------------------->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="title" content="Zack Evans | Web Developer">
+        <meta name="description" content="Hi! I'm Zack Evans a Full Stack Developer. I love to work on websites and different web applications.">
+        <meta name="keywords" content="Developer, Zack Evans, Design, Front-End, Back-End">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="English">
         <title>Zack Evans | Home</title>
         <!-- Main Page HTML
         ---------------------------------------------->
