--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <img src="assets/logo/inspiring-skills-wales.png" alt="Inspiring Skills Wales">
                     <div>
                       <h3>Inspiring Skills Wales</h3>
-                      <p>2018 | 1nd Place</p>
+                      <p>2018 | 1st Place</p>
                     </div>
                   </div>
                   <div class="card wow fadeInLeft">
