Text Change | Added new files (Robots & Sitemap)

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         ---------------------------------------------->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="title" content="Zack Evans | Web Developer">
+        <meta name="title" content="Zack Evans | Full Stack Web Developer">
         <meta name="description" content="Hi! I'm Zack Evans a Full Stack Developer. I love to work on websites and different web applications.">
-        <meta name="keywords" content="Developer, Zack Evans, Design, Front-End, Back-End">
+        <meta name="keywords" content="Wales, Full Stack, HTML, CSS, Backend, Frontend, Developer, Zack Evans, Design, Front-End, Back-End">
         <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
@@ -113,7 +113,7 @@
                     <img src="assets/logo/world-skills.png" alt="World Skills UK">
                     <div>
                       <h3>WSUK Web Design Competition </h3>
-                      <p>2019 | 8th Place</p>
+                      <p>2019 | Top 8</p>
                     </div>
                   </div>
                   <div class="card wow fade-left fadeInLeft">
