--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
                     <img src="assets/logo/world-skills.png" alt="World Skills UK">
                     <div>
                       <h3>WSUK Web Design Competition </h3>
-                      <p>2019 | Top 8</p>
+                      <p>2019 | Qualify for National Final</p>
                     </div>
                   </div>
                   <div class="card wow fade-left fadeInLeft">
                     <img src="assets/logo/world-skills.png" alt="World Skills UK">
                     <div>
                       <h3>WSUK Nation Final </h3>
-                      <p>2019 | TBC</p>
+                      <p>2019 | 2nd Place</p>
                     </div>
                   </div>
                 </div>
@@ -134,6 +134,7 @@
                 <p class="wow fadeIn">I started out in 2017 working on small little websites for myself and friends.</p>
                 <p class="wow fadeIn">In 2018 I started to take part in web design & development competitions.</p>
                 <p class="wow fadeIn">2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
+                <p class="wow fadeIn">Also in 2019, i took place in the heats for world skills in web design. After doing so I placed in the Top 10 and went to the National Final at Birmingham.</p>
                 <div class="wow fadeInRight">
                   <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
                   <div class="progress"><p style="width: 90%;">90%</p></div>
@@ -144,11 +145,11 @@
                 </div>
                 <div class="wow fadeInRight">
                   <p class=""><i class="fas fa-cogs"></i> Backend Web Development (PHP | MySQL | Java)</p>
-                  <div class="progress"><p style="width: 55%;">55%</p></div>
+                  <div class="progress"><p style="width: 60%;">60%</p></div>
                 </div>
                 <div class="wow fadeInRight">
                   <p class=""><i class="fas fa-cubes"></i> Software Development (C# | C++)</p>
-                  <div class="progress"><p style="width: 30%;">30%</p></div>
+                  <div class="progress"><p style="width: 40%;">40%</p></div>
                 </div>
               </div>
             </section>
