So far of what the team building is

--- a/index.html
+++ b/index.html
@@ -177,6 +177,15 @@
                       <img src="assets/project/dev.png" alt="">
                     </div>
                   </a>
+                  <a href="http://team.zackevans.xyz" target="_blank">
+                    <div class="content purple flex flex-row wow fadeInRight">
+                      <div>
+                        <h3>Team Site</h3>
+                        <p>This was the team building exersie within the WSUK National Final.</p>
+                      </div>
+                      <img src="assets/project/team.png" alt="">
+                    </div>
+                  </a>
                 </div>
               </div>
 
