Change colours of projects | Added new project

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <h2 class="wow fadeInLeft">Projects</h2>
                 <div>
                   <a href="http://colours.zackevans.xyz" target="_blank">
-                    <div class="content yellow flex flex-row wow fadeInLeft">
+                    <div class="content orange flex flex-row wow fadeInLeft">
                       <div>
                         <h3>Random Colour Generator</h3>
                         <p>A little project I created becuase I hate coming up with different colour ideas.</p>
@@ -169,7 +169,7 @@
                     </div>
                   </a>
                   <a href="http://dev.zackevans.xyz" target="_blank">
-                    <div class="content flex flex-row wow fadeInRight">
+                    <div class="content yellow flex flex-row wow fadeInRight">
                       <div>
                         <h3>Task Planner</h3>
                         <p>This project has one mission. Stops me from forgetting events and projects.</p>
@@ -178,7 +178,7 @@
                     </div>
                   </a>
                   <a href="http://team.zackevans.xyz" target="_blank">
-                    <div class="content purple flex flex-row wow fadeInRight">
+                    <div class="content green flex flex-row wow fadeInRight">
                       <div>
                         <h3>Team Site</h3>
                         <p>This was the team building exersie within the WSUK National Final.</p>
