--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <p class="wow fadeIn">I started out in 2017 working on small little websites for myself and friends.</p>
                 <p class="wow fadeIn">In 2018 I started to take part in web design & development competitions.</p>
                 <p class="wow fadeIn">2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
-                <p class="wow fadeIn">Also in 2019, i took place in the heats for world skills in web design. After doing so I placed in the Top 10 and went to the National Final at Birmingham.</p>
+                <p class="wow fadeIn">At the end of 2019, I took part in the WorldSkills National Final in Web Design / Development.</p>
                 <div class="wow fadeInRight">
                   <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
                   <div class="progress"><p style="width: 90%;">90%</p></div>
