Added team section and new linked in page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="title" content="Zack Evans | Full Stack Web Developer">
         <meta name="description" content="Hi! I'm Zack Evans a Full Stack Developer. I love to work on websites and different web applications.">
-        <meta name="keywords" content="Wales, Full Stack, HTML, CSS, Backend, Frontend, Developer, Zack Evans, Design, Front-End, Back-End">
+        <meta name="keywords" content="Wales, WorldSkills UK, WorldSkills, Full Stack, HTML, CSS, Backend, Frontend, Developer, Zack Evans, Design, Front-End, Back-End">
+	<meta name="author" content="Zack Evans">
         <meta name="robots" content="index, follow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
@@ -54,7 +55,7 @@
                 <a href="#projects"><li id="navProjects"><i class="fas fa-eye"></i></li></a>
               </ul>
               <ul class="social fadeIn">
-                <a href="https://www.linkedin.com/in/zack-evans-853075157/"><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
+                <a href="https://www.linkedin.com/in/zevans-"><li id="navLinked"><i class="fab fa-linkedin-in"></i></li></a>
                 <a href="https://www.facebook.com/zevans35"><li id="navFace"><i class="fab fa-facebook-f"></i></li></a>
                 <a href="https://instagram.com/zevans353"><li id="navInsta"><i class="fab fa-instagram"></i></li></a>
               </ul>
