--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
                 <p class="wow fadeIn">In 2018 I started to take part in web design & development competitions.</p>
                 <p class="wow fadeIn">2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
                 <p class="wow fadeIn">At the end of 2019, I took part in the WorldSkills National Final in Web Design / Development.</p>
-                <div class="wow fadeInRight">
+                <div class="wow fadeInLeft">
                   <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
                   <div class="progress"><p style="width: 90%;">90%</p></div>
                 </div>
-                <div class="wow fadeInRight">
+                <div class="wow fadeInLeft">
                   <p class=""><i class="far fa-images"></i> CMS Development (Wordpress)</p>
                   <div class="progress"><p style="width: 70%;">70%</p></div>
                 </div>
-                <div class="wow fadeInRight">
+                <div class="wow fadeInLeft">
                   <p class=""><i class="fas fa-cogs"></i> Backend Web Development (PHP | MySQL | Java)</p>
                   <div class="progress"><p style="width: 60%;">60%</p></div>
                 </div>
-                <div class="wow fadeInRight">
+                <div class="wow fadeInLeft">
                   <p class=""><i class="fas fa-cubes"></i> Software Development (C# | C++)</p>
                   <div class="progress"><p style="width: 40%;">40%</p></div>
                 </div>
@@ -170,7 +170,7 @@
                     </div>
                   </a>
                   <a href="http://dev.zackevans.xyz" target="_blank">
-                    <div class="content yellow flex flex-row wow fadeInRight">
+                    <div class="content yellow flex flex-row wow fadeInLeft">
                       <div>
                         <h3>Task Planner</h3>
                         <p>This project has one mission. Stops me from forgetting events and projects.</p>
@@ -179,7 +179,7 @@
                     </div>
                   </a>
                   <a href="http://team.zackevans.xyz" target="_blank">
-                    <div class="content green flex flex-row wow fadeInRight">
+                    <div class="content green flex flex-row wow fadeInLeft">
                       <div>
                         <h3>Team Site</h3>
                         <p>This was the team building exersie within the WSUK National Final.</p>
