Added new text edit and better css

--- a/index.html
+++ b/index.html
@@ -97,13 +97,6 @@
                 <h2 class="wow fadeInLeft">My Achievements</h2>
                 <div class="flex flex-row">
                   <div class="card wow fadeInLeft">
-                    <img src="assets/logo/world-skills.png" alt="World Skills UK">
-                    <div>
-                      <h3>WSUK Regional Heat</h3>
-                      <p>2018 | 2nd Place</p>
-                    </div>
-                  </div>
-                  <div class="card wow fadeInLeft">
                     <img src="assets/logo/inspiring-skills-wales.png" alt="Inspiring Skills Wales">
                     <div>
                       <h3>Inspiring Skills Wales</h3>
@@ -131,11 +124,9 @@
             <section id="aboutme" class="flex">
               <div>
                 <h2 class="wow fadeInLeft">About Me</h2>
-                <p class="wow fadeIn">It started out as a hobby for tech. It then evloved into the design and creation of websites.</p>
-                <p class="wow fadeIn">I started out in 2017 working on small little websites for myself and friends.</p>
-                <p class="wow fadeIn">In 2018 I started to take part in web design & development competitions.</p>
-                <p class="wow fadeIn">2019 I got my first job as a web developer working for <u><a href="https://inngot.com">Inngot</a></u>.</p>
-                <p class="wow fadeIn">At the end of 2019, I took part in the WorldSkills National Final in Web Design / Development.</p>
+                <p class="wow fadeIn">I'm a Web Developer for <u><a href="https://inngot.com">Inngot</a></u> in Wales, UK. I have a great passion for Web Design and Development.</p>
+                <p class="wow fadeIn">I started out in 2017 creating websites for myself and friends.</p>
+                <p class="wow fadeIn">It turned into a proper thing when I started to take part in competitions and landing a job as a developer.</p>
                 <div class="wow fadeInLeft">
                   <p class=""><i class="fab fa-html5"></i> Frontend Web Development (HTML | CSS | JS | JQUERY)</p>
                   <div class="progress"><p style="width: 90%;">90%</p></div>
@@ -166,7 +157,7 @@
                         <h3>Random Colour Generator</h3>
                         <p>A little project I created becuase I hate coming up with different colour ideas.</p>
                       </div>
-                      <img src="assets/project/colours.png" alt="">
+                      <img src="assets/project/colours.png" alt="My Colour Generation Website">
                     </div>
                   </a>
                   <a href="http://dev.zackevans.xyz" target="_blank">
@@ -175,7 +166,7 @@
                         <h3>Task Planner</h3>
                         <p>This project has one mission. Stops me from forgetting events and projects.</p>
                       </div>
-                      <img src="assets/project/dev.png" alt="">
+                      <img src="assets/project/dev.png" alt="Working on a task management site">
                     </div>
                   </a>
                   <a href="http://team.zackevans.xyz" target="_blank">
@@ -184,7 +175,7 @@
                         <h3>Team Site</h3>
                         <p>This was the team building exersie within the WSUK National Final.</p>
                       </div>
-                      <img src="assets/project/team.png" alt="">
+                      <img src="assets/project/team.png" alt="Site made when taking part within the National Final">
                     </div>
                   </a>
                 </div>
