Removed unused css variables

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <h2 class="fadeInLeft">Projects</h2>
           <div>
             <a href="https://github.com/z-evans/home" target="_blank">
-              <div class="content green flex flex-row fadeInLeft">
+              <div class="content flex flex-row fadeInLeft">
                 <div>
                   <h3>Home - Work in progress</h3>
                   <p>
@@ -292,7 +292,7 @@
               href="https://github.com/z-evans/WarframeMarket-DiscordBot"
               target="_blank"
             >
-              <div class="content green flex flex-row fadeInLeft">
+              <div class="content flex flex-row fadeInLeft">
                 <div>
                   <h3>WarframeMarket Discord Bot</h3>
                   <p>
@@ -312,7 +312,7 @@
               </div>
             </a>
             <a href="http://team.zevans.co.uk" target="_blank">
-              <div class="content green flex flex-row fadeInLeft">
+              <div class="content flex flex-row fadeInLeft">
                 <div>
                   <h3>WSUK Team Competition</h3>
                   <p>
@@ -333,7 +333,7 @@
               </div>
             </a>
             <a href="http://dev.zevans.co.uk" target="_blank">
-              <div class="content yellow flex flex-row fadeInLeft">
+              <div class="content flex flex-row fadeInLeft">
                 <div>
                   <h3>Task Planner</h3>
                   <p>
