--- a/index.html
+++ b/index.html
@@ -1,367 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta Data
-        ---------------------------------------------->
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Zack Evans | Full Stack Web Developer" />
-    <meta
-      name="description"
-      content="Hi! I'm Zack Evans a Full Stack Developer. I love to work on websites and different web applications."
-    />
-    <meta
-      name="keywords"
-      content="Wales, WorldSkills UK, WorldSkills, Full Stack, HTML, CSS, Backend, Frontend, Developer, Zack Evans, Design, Front-End, Back-End"
-    />
-    <meta name="author" content="Zack Evans" />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="English" />
-    <title>Zack Evans | Home</title>
-    <!-- Main Page HTML
-        ---------------------------------------------->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/anim.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-    />
-    <!-- JQuery
-        ---------------------------------------------->
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <!-- Fonts
-        ---------------------------------------------->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Ubuntu"
-      rel="stylesheet"
-    />
+    <title>Zack Evans</title>
   </head>
   <body>
-    <!-- Loading Screen
-        ---------------------------------------------->
-    <section id="ud_preloader">
-      <div id="ud_dots">
-        <div id="loader"></div>
-      </div>
-      <div id="ud_pre_down" class="ud_pre_down"></div>
-    </section>
-
-    <!-- Main Page HTML
-        ---------------------------------------------->
-    <main>
-      <!-- Navigation
-            ---------------------------------------------->
-      <a class="responsive" onclick="showNav()"><i class="fas fa-bars"></i></a>
-      <nav id="nav" class="nav">
-        <a href="#top"
-          ><img src="assets/logo/site.png" alt="LOGO" class="logo"
-        /></a>
-        <ul class="nav-central">
-          <a href="#top"
-            ><li id="navHome"><i class="fas fa-home"></i></li
-          ></a>
-          <a href="#aboutme"
-            ><li id="navAbout"><i class="fas fa-cogs"></i></li
-          ></a>
-          <a href="#achievements"
-            ><li id="navAchievements"><i class="fas fa-trophy"></i></li
-          ></a>
-          <a href="#projects"
-            ><li id="navProjects"><i class="fas fa-eye"></i></li
-          ></a>
-        </ul>
-        <ul class="social">
-          <a href="https://www.linkedin.com/in/zevans-"
-            ><li id="navLinked"><i class="fab fa-linkedin-in"></i></li
-          ></a>
-          <a href="https://instagram.com/zevans353"
-            ><li id="navInsta"><i class="fab fa-instagram"></i></li
-          ></a>
-          <a href="https://github.com/z-evans"
-            ><li><i class="fab fa-github"></i></li
-          ></a>
-        </ul>
-      </nav>
-
-      <!-- Header | Front Page
-            ---------------------------------------------->
-      <header id="top">
-        <div class="head-text">
-          <h1>Zack Evans</h1>
-          <h2>Full Stack Developer</h2>
-        </div>
-      </header>
-
-      <section id="aboutme" class="flex">
-        <div>
-          <h2>About Me</h2>
-          <p>
-            I'm a Web Developer for
-            <u><a href="https://inngot.com">Inngot</a></u> in Wales, UK. I have
-            a great passion for UI/UX Design and background development.
-          </p>
-          <p>
-            I love all things tech. And love learning new things on a day to day
-            basis.
-          </p>
-        </div>
-      </section>
-
-      <section id="technologies" class="flex">
-        <div>
-          <h2>Technologies</h2>
-          <p>Here is a list of technologies I use when developing:</p>
-          <div class="cards">
-            <div>
-              <img src="assets/logo/technologies/html5.png" alt="HTML 5" />
-              <p>HTML 5</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/css3.png" alt="CSS 3" />
-              <p>CSS</p>
-            </div>
-            <div>
-              <img
-                src="assets/logo/technologies/javascript.png"
-                alt="Javascript"
-              />
-              <p>JavaScript</p>
-            </div>
-            <div>
-              <img
-                src="assets/logo/technologies/typescript.png"
-                alt="Typescript"
-              />
-              <p>TypeScript</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/jquery.png" alt="JQuery" />
-              <p>jQuery</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/react.png" alt="ReactJS" />
-              <p>ReactJS</p>
-            </div>
-            <div>
-              <img
-                src="assets/logo/technologies/wordpress.png"
-                alt="WordPress"
-              />
-              <p>WordPress</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/php.png" alt="PHP" />
-              <p>PHP</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/java.png" alt="Java" />
-              <p>Java</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/spring.png" alt="Springboot" />
-              <p>Springboot</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/nodejs.png" alt="NodeJS" />
-              <p>NodeJS</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/electron.png" alt="electron" />
-              <p>Electron</p>
-            </div>
-            <div>
-              <img src="assets/logo/technologies/mysql.png" alt="MySQL" />
-              <p>MySQL</p>
-            </div>
-            <div>
-              <img
-                src="assets/logo/technologies/postgresql.png"
-                alt="PostgreSQL"
-              />
-              <p>PostgreSQL</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="achievements" class="flex">
-        <div>
-          <h2 class="fadeInLeft">My Achievements</h2>
-          <div class="flex flex-row">
-            <div class="card fadeInLeft">
-              <img
-                src="assets/logo/inspiring-skills-wales.png"
-                alt="Inspiring Skills Wales"
-              />
-              <div>
-                <h3>Inspiring Skills Wales</h3>
-                <p>2018 | 1st Place</p>
-              </div>
-            </div>
-            <div class="card fadeInLeft">
-              <img src="assets/logo/world-skills.png" alt="World Skills UK" />
-              <div>
-                <h3>WSUK Web Design Heat</h3>
-                <p>2019 | Qualify for National Final</p>
-              </div>
-            </div>
-            <div class="card fade-left fadeInLeft">
-              <img src="assets/logo/world-skills.png" alt="World Skills UK" />
-              <div>
-                <h3>WSUK Web Design Nation Final</h3>
-                <p>2019 | 2nd Place</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="education" class="flex">
-        <div>
-          <h2>Education</h2>
-          <div>
-            <div class="card">
-              <h3>BE, Computer Software Engineering</h3>
-              <p class="location">University of Wales Trinity Saint David</p>
-              <p class="duration">2019 - 2023</p>
-              <p>
-                The course focuses on designing, implementing, testing and
-                maintenance of high-quality software solutions. The course
-                focuses on acquiring and using the expertise required by a
-                professional programmer to create solutions to large and complex
-                problems.
-              </p>
-              <ul>
-                <li>Advanced Software Development</li>
-                <li>Software Engineering Principles and Testing</li>
-                <li>Network Operating Systems and Services</li>
-              </ul>
-            </div>
-            <div class="card">
-              <h3>Level 3 Information Technology</h3>
-              <p class="location">NPTC Group, Neath College</p>
-              <p class="duration">2017 - 2019</p>
-              <p>
-                The course is designed to provide highly specialist,
-                work-related qualifications in the Computing and Information
-                Technology sector. Its aim is to give the knowledge,
-                under-standing and skills they need to prepare for employment.
-              </p>
-              <ul>
-                <li>Event Driven Programming</li>
-                <li>Website Production</li>
-                <li>Computer Networking</li>
-                <li>Computer Games Development</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="projects" class="flex">
-        <div>
-          <h2 class="fadeInLeft">Projects</h2>
-          <div>
-            <a href="https://github.com/z-evans/home" target="_blank">
-              <div class="content flex flex-row fadeInLeft">
-                <div>
-                  <h3>Home - Work in progress</h3>
-                  <p>
-                    Software thats underdevelopment to replace local nextcloud
-                    software and note / task tracker software that was made with
-                    PHP & JQuery.
-                  </p>
-                  <div class="icons">
-                    <img src="assets/logo/technologies/react.png" alt="" />
-                    <img src="assets/logo/technologies/nodejs.png" alt="" />
-                    <img src="assets/logo/technologies/typescript.png" alt="" />
-                  </div>
-                </div>
-                <img
-                  src="assets/project/github.jpg"
-                  alt="Site made when taking part within the National Final"
-                />
-              </div>
-            </a>
-            <a
-              href="https://github.com/z-evans/WarframeMarket-DiscordBot"
-              target="_blank"
-            >
-              <div class="content flex flex-row fadeInLeft">
-                <div>
-                  <h3>WarframeMarket Discord Bot</h3>
-                  <p>
-                    Bot made to track market prices within a game called
-                    Warframe.
-                  </p>
-                  <div class="icons">
-                    <img src="assets/logo/technologies/nodejs.png" alt="" />
-                    <img src="assets/logo/technologies/typescript.png" alt="" />
-                    <img src="assets/logo/technologies/discordjs.png" alt="" />
-                  </div>
-                </div>
-                <img
-                  src="assets/project/discord.png"
-                  alt="Site made when taking part within the National Final"
-                />
-              </div>
-            </a>
-            <a href="http://team.zevans.co.uk" target="_blank">
-              <div class="content flex flex-row fadeInLeft">
-                <div>
-                  <h3>WSUK Team Competition</h3>
-                  <p>
-                    Several people grouped together with different skills were
-                    challenged to create a website within and host it on the
-                    local network.
-                  </p>
-                  <div class="icons">
-                    <img src="assets/logo/technologies/html5.png" alt="" />
-                    <img src="assets/logo/technologies/css3.png" alt="" />
-                    <img src="assets/logo/technologies/javascript.png" alt="" />
-                  </div>
-                </div>
-                <img
-                  src="assets/project/team.png"
-                  alt="Site made when taking part within the National Final"
-                />
-              </div>
-            </a>
-            <a href="http://dev.zevans.co.uk" target="_blank">
-              <div class="content flex flex-row fadeInLeft">
-                <div>
-                  <h3>Task Planner</h3>
-                  <p>
-                    This project has one mission. Stops me from forgetting
-                    events and projects.
-                  </p>
-                  <div class="icons">
-                    <img src="assets/logo/technologies/html5.png" alt="" />
-                    <img src="assets/logo/technologies/css3.png" alt="" />
-                    <img src="assets/logo/technologies/javascript.png" alt="" />
-                    <img src="assets/logo/technologies/jquery.png" alt="" />
-                  </div>
-                </div>
-                <img
-                  src="assets/project/dev.png"
-                  alt="Working on a task management site"
-                />
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- JavaScript for web page
-        ---------------------------------------------->
-    <script type="text/javascript" src="js/page-load.js"></script>
-    <script type="text/javascript" src="js/scroll.js"></script>
-    <script type="text/javascript" src="js/nav.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
